# ugs

./: .gitignore  .gitmodules  AndroidSurface.cpp  CMakeLists.txt  CocoaSurface.mm  GBMSurface.cpp  MaliFBSurface.cpp  OpenWFCSurface.cpp  PlatformSurface.cpp  README.md  RPiSurface.cpp  RenderLoop.cpp  UIKitSurface.mm  UIRun.cpp  UIRun.h  WaylandEGLSurface.cpp  WaylandSurface.cpp  WaylandSurface.h  Win32Surface.cpp  WinRTSurface.cpp  X11Surface.cpp  circle.yml  ugs.sln  ugs.vcxproj  ugs.vcxproj.filters  winui.h  xdg-shell.h
.circleci/: config.yml
base/: BlockingQueue.h  Semaphore.cpp  Semaphore.h  mpsc_fifo.h
cmake/: FindWayland.cmake
examples/: CMakeLists.txt  D3D11RenderLoop.cpp  D3D11RenderLoop.h  EGLRenderLoop.cpp  EGLRenderLoop.h  d3d11test.vcxproj  d3d11test.vcxproj.filters  testd3d11.cpp  testegl.cpp
include/ugs/: PlatformSurface.h  RenderLoop.h  export.h
include/ugsurface/: PlatformSurface.h  RenderLoop.h  export.h
